--- a/index.html
+++ b/index.html
@@ -1,13 +1,274 @@
 <!doctype html>
 <html lang="ko">
 <head>
-	<meta charset="UTF-8">
-	<title>Index</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, viewport-fit=cover">
+	<meta name="format-detection" content="telephone=no, address=no, email=no">
+	<meta name="robots" content="noindex,nofollow">
+    <title>zoohyeon</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600,800" rel="stylesheet">
+	<link rel="stylesheet" href="static/css/common.css">
 </head>
 <body>
-	<h1>Hello Index!</h1>
-	<script>
-	console.log('Hello Index!');
-	</script>
+    <div id="wrp">
+        <header id="header">
+            <h1>zoohyeon</h1>
+        </header>
+        <ul class="lst">
+            <li>
+                <a href="jayjun/front/main.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_jayjun_main.jpg" alt="i KNOW iONE web main"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>i KNOW iONE</h2>
+                                <h3>web</h3>
+                                <p>Main page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="jayjun/front/goodsList.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_jayjun_list.jpg" alt="i KNOW iONE web list"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>i KNOW iONE</h2>
+                                <h3>web</h3>
+                                <p>List page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="jayjun/front/goodsDetail.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_jayjun_detail.jpg" alt="i KNOW iONE web detail"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>i KNOW iONE</h2>
+                                <h3>web</h3>
+                                <p>Detail page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="jayjun/m/main_m.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_jayjun_m_main.jpg" alt="i KNOW iONE mobile main"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>i KNOW iONE</h2>
+                                <h3>mobile</h3>
+                                <p>Main page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="jayjun/m/goodsList.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_jayjun_m_list.jpg" alt="i KNOW iONE mobile list"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>i KNOW iONE</h2>
+                                <h3>mobile</h3>
+                                <p>List page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="jayjun/m/goodsDetail.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_jayjun_m_detail.jpg" alt="i KNOW iONE mobile detail"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>i KNOW iONE</h2>
+                                <h3>mobile</h3>
+                                <p>Detail page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="guess_web/docs/index.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_guess_main.jpg" alt="GUESS web main"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>GUESS</h2>
+                                <h3>web</h3>
+                                <p>Main page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="guess_web/docs/goods_list.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_guess_list.jpg" alt="GUESS web list"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>GUESS</h2>
+                                <h3>web</h3>
+                                <p>List page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="guess_web/docs/goods_detail.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_guess_detail.jpg" alt="GUESS web detail"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>GUESS</h2>
+                                <h3>web</h3>
+                                <p>Detail page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="guess_m/docs/index.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_guess_m_main.jpg" alt="GUESS mobile main"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>GUESS</h2>
+                                <h3>mobile</h3>
+                                <p>Main page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="guess_m/docs/goods_list.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_guess_m_list.jpg" alt="GUESS mobile list"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>GUESS</h2>
+                                <h3>mobile</h3>
+                                <p>List page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="guess_m/docs/goods_detail.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_guess_m_detail.jpg" alt="GUESS mobile detail"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>GUESS</h2>
+                                <h3>mobile</h3>
+                                <p>Detail page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="airwalk_web/docs/index.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_awk_main.jpg" alt="AWKmall web main"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>AWKmall</h2>
+                                <h3>web</h3>
+                                <p>Main page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="airwalk_web/docs/goods_list.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_awk_list.jpg" alt="AWKmall web list"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>AWKmall</h2>
+                                <h3>web</h3>
+                                <p>List page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="airwalk_web/docs/goods_view.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_awk_detail.jpg" alt="AWKmall web detail"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>AWKmall</h2>
+                                <h3>web</h3>
+                                <p>Detail page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="airwalk_m/docs/index.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_awk_m_main.jpg" alt="AWKmall mobile main"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>AWKmall</h2>
+                                <h3>mobile</h3>
+                                <p>Main page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="airwalk_m/docs/goods_list.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_awk_m_list.jpg" alt="AWKmall mobile list"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>AWKmall</h2>
+                                <h3>mobile</h3>
+                                <p>List page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="airwalk_m/docs/goods_view.html" target="_blank">
+                    <figure class="itm">
+                        <div class="img"><img src="static/img/sc_awk_m_detail.jpg" alt="AWKmall mobile detail"></div>
+                        <figcaption>
+                            <div class="txt">
+                                <h2>AWKmall</h2>
+                                <h3>mobile</h3>
+                                <p>Detail page</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
